force-app/main/default/objects/Construction_Feasibility_Review__c/Construction_Feasibility_Review__c.object-meta.xml
<CustomObject>
    <label>Construction Condition Assessment</label>
    <nameField>
        <displayFormat>CFR-{0000}</displayFormat>
        <label>CFR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Construction Condition Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>