force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Addition_Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Addition_Work_Description__c</fullName>
    <label>Addition Work Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>