force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Addition_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>Addition_Work_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Addition Work Required</label>
    <type>Checkbox</type>
</CustomField>