force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Building_Envelope_Facade__c.field-meta.xml
<CustomField>
    <fullName>Building_Envelope_Facade__c</fullName>
    <label>Building Envelope / Facade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>