force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Code_Compliance_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Code_Compliance_Concerns__c</fullName>
    <label>Code / Compliance Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>