force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions (if Conditional)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>