force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Estimated_Addition_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Addition_Cost__c</fullName>
    <label>Estimated Addition Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>