force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Estimated_MEP_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_MEP_Cost__c</fullName>
    <label>Estimated MEP Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>