force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Estimated_Timeline_Impact__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Timeline_Impact__c</fullName>
    <label>Estimated Timeline Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>