force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Opinion_Delivered_Date__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Delivered_Date__c</fullName>
    <label>Opinion Delivered Date</label>
    <type>Date</type>
</CustomField>