force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Opinion_Summary__c.field-meta.xml
<CustomField>
    <fullName>Opinion_Summary__c</fullName>
    <label>Opinion Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>