force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Construction Feasibility Reviews</relationshipLabel>
    <relationshipName>Construction_Feasibility_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>