force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Overall_Condition_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Condition_Rating__c</fullName>
    <label>Overall Condition Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>