force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The property this construction condition assessment is for.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Construction Feasibility Reviews</relationshipLabel>
    <relationshipName>Construction_Feasibility_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>