force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Roof_Age_Years__c.field-meta.xml
<CustomField>
    <fullName>Roof_Age_Years__c</fullName>
    <label>Roof Age (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>