force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Roof_Condition__c.field-meta.xml
<CustomField>
    <fullName>Roof_Condition__c</fullName>
    <label>Roof Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Needs Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>