force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Site_Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Notes__c</fullName>
    <label>Site Access Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>