force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Site_Visit_By__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_By__c</fullName>
    <label>Site Visit By</label>
    <length>120</length>
    <type>Text</type>
</CustomField>