force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Site_Visit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Completed_Date__c</fullName>
    <label>Site Visit Completed Date</label>
    <type>Date</type>
</CustomField>