force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Site_Visit_Photos__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Photos__c</fullName>
    <label>Site Visit Photos</label>
    <type>Url</type>
</CustomField>