force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Structural_Site_Settling__c.field-meta.xml
<CustomField>
    <fullName>Structural_Site_Settling__c</fullName>
    <label>Structural / Site Settling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>