force-app/main/default/objects/Construction_Feasibility_Review__c/fields/Upgrades_Required__c.field-meta.xml
<CustomField>
    <fullName>Upgrades_Required__c</fullName>
    <label>Upgrades Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>